# melonmusic

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2026-07-03-000653-0000_dbsetup/: down.sql  up.sql
backend/src/: error.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs
frontend/: .gitignore  Cargo.toml
frontend/src/: app.rs  lib.rs  main.rs
frontend/src/components/: mod.rs
frontend/src/pages/: home.rs  mod.rs
frontend/static/: styles.css
