[package]
name = "melonmusic-backend"
version = "0.1.0"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2024"
description = "Axum and Yew powered web app for sharing music links (backend)"
repository = "https://github.com/foxboxpdx/melonmusic"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.45", features = ["serde"] }
diesel = { version = "2.3.10", features = ["sqlite", "serde_json", "chrono"] }
diesel-async = { version = "0.9.2", features = ["async-connection-wrapper", "sqlite", "bb8", "migrations"] }
diesel_migrations = "2"
dotenvy = "0.15.7"
env_logger = "0.11.11"
futures = "0.3.32"
lazy_static = "1.5.0"
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
log = "0.4.33"
melonmusic-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.51", features = ["serde-human-readable"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
