[package]
name = "melonmusic-frontend"
version = "0.1.0"
authors = ["Fox Box <foxboxpdx@gmail.com>"]
edition = "2024"
description = "Axum and Yew powered web app for sharing music links (frontend)"
repository = "https://github.com/foxboxpdx/melonmusic"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
chrono-tz = "0.10.4"
croner = "3.0.1"
gloo-console = "0.4"
gloo-net = "0.7.0"
iana-time-zone = "0.1.65"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
yew-router = "0.20.0"
yew = { version = "0.23.0", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.103"
features = ["Document", "Element", "HtmlElement", "Node", "HtmlSelectElement", "Navigator", "Clipboard", "Window", "KeyboardEvent"]

[profile.release]
panic = 'abort'
